--- a/public/css/home.css
+++ b/public/css/home.css
@@ -22,14 +22,15 @@
 }
 
 .card {
-  background-color: white;
-  margin: 10px 0;
-  padding: 15px;
+  background-color: #fff;
+  margin-top: 20px;
+  padding: 10px;
   border: 1px solid var(--grisClaro);
 }
 
 .card-body {
   border-top: 1px solid var(--grisClaro);
+  position: relative;
 }
 
 .card__img {
@@ -37,23 +38,24 @@
 }
 
 .card-body__send-icon {
-  display: flex;
-  flex-direction: row-reverse;
-  margin: 10px 0;
+  position: absolute;
+  right: 20px;
+  top: -15px;
 }
 
 .card-body__send-icon i {
-  padding: 6px;
+  padding: 5px;
   font-size: 16px;
   color: var(--verde);
-  width: 32;
-  height: 32;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
+  background-color: #fff;
   border: 1px solid var(--verde);
 }
 
 .card-body__p-d {
-  margin-top: 10px;
+  margin-top: 20px;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -64,13 +66,14 @@
 }
 
 .card-body__descuento {
-  font-size: var(--fontSizeDescuento);
+  font-size: .9rem;
   color: var(--verde);
 }
 
 .card-body__descripcion {
   height: 0;
   overflow: hidden;
+  transition: all 1.5s ease;
 }
 
 @media (min-width: 481px) {
@@ -78,6 +81,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-items: flex-start;
   }
 
   .cards__titulo {
@@ -86,16 +90,37 @@
 
   .card {
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    transition: all 0.5s ease;
     width: 45%;
   }
 }
 
 @media (min-width: 769px) {
   .card {
-    width: 21%;
+    width: 22%;
+    box-shadow: none;
+  }
+  .card:hover {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+  }
+  .card:hover .card-body__descripcion {
+    height: 20px;
+    margin-top: 5px;
   }
 
-  .card:hover .card-body:last-child p {
-    display: block;
+  .card-body__send-icon:hover i {
+    animation: rotateTruck 1s;
+    transition: all 0.5 ease;
+  }
+  @keyframes rotateTruck {
+    0% {
+      transform: rotate(0);
+    }
+    50% {
+      transform: rotate(-90deg);
+    }
+    100% {
+      transform: rotate(0);
+    }
   }
 }
