--- a/public/css/general.css
+++ b/public/css/general.css
@@ -2,6 +2,7 @@
   --amarillo: #eac926;
   --azul: #03264c;
   --celeste: #1259c3;
+  --botonEnviar:#0022AA;
   --grisOscuro: #666;
   --grisClaro: #ebebeb;
   --verde: #00a650;
