--- a/public/css/register.css
+++ b/public/css/register.css
@@ -4,13 +4,15 @@
 .main-container {
   width: 90%;
   margin: 0 auto;
+  max-width: 450px;
 }
 .register__form {
   padding: 20px 0;
   display: flex;
   flex-direction: column;
 }
-.register__form h3, h4{
+.register__form h3,
+h4 {
   color: var(--grisOscuro);
 }
 
@@ -19,6 +21,7 @@
   border: 1px solid var(--grisClaro);
   border-radius: 5px;
   margin: 15px 0;
+  outline: none;
 }
 .form__perfil {
   display: flex;
@@ -39,16 +42,14 @@
 }
 .form__button {
   padding: 10px 30px;
-  background-color: var(--celeste);
+  background-color: var(--botonEnviar);
   color: white;
   border-radius: 5px;
   border: none;
   width: 100%;
+  transition: all 1seg ease;
 }
 @media (min-width: 481px) {
-  .main-container {
-    width: 70%;
-  }
   .form__button {
     margin: 0 auto;
     width: 50%;
@@ -56,11 +57,11 @@
 }
 
 @media (min-width: 769px) {
-  .main-container {
-    width:40%;
-  }
   .form__button {
     margin: 0 auto;
     width: 50%;
+  }
+  .form__button:hover {
+    background-color: var(--celeste);
   }
 }
