--- a/views/register.html
+++ b/views/register.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="/css/styles.css">
     <title>Mercado Liebre</title>
 </head>
@@ -25,19 +24,23 @@
             </div>
         </div>
         <div class="header-bottom-area">
+            <div class="burger-menu">
+                <button onclick="document.querySelector('.header-nav').classList.toggle('showMenu')"
+                    class="burger-menu__button" href=""><i class="fas fa-bars burger-menu__i"></i></button>
+            </div>
             <nav class="header-nav">
                 <ul class="header-nav__list-left">
                     <li class="list-left__item">
-                        <a class="header-nav__link" href="">Ofertas</a>
+                        <a class="header-nav__link" href="#">Ofertas</a>
                     </li>
                     <li class="list-left__item">
-                        <a class="header-nav__link" href="">Tiendas Oficiales</a>
+                        <a class="header-nav__link" href="#">Tiendas Oficiales</a>
                     </li>
                     <li class="list-left__item">
-                        <a class="header-nav__link" href="">Vender</a>
+                        <a class="header-nav__link" href="#">Vender</a>
                     </li>
                     <li class="list-left__item">
-                        <a class="header-nav__link" href="">Ayuda</a>
+                        <a class="header-nav__link" href="#">Ayuda</a>
                     </li>
                 </ul>
                 <ul class="header-nav__list-right">
@@ -46,16 +49,14 @@
                                 class="fa-regular fa-id-card"></i></a>
                     </li>
                     <li class="list-right__item">
-                        <a class="header-nav__link" href="/login">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a>
+                        <a class="header-nav__link" href="/login">Ingresá <i
+                                class="fa-solid fa-right-to-bracket"></i></a>
                     </li>
                     <li class="list-right__item">
-                        <a class="header-nav__link" href="">Mis compras <i class="fa-solid fa-basket-shopping"></i></a>
+                        <a class="header-nav__link" href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a>
                     </li>
                 </ul>
             </nav>
-        </div>
-        <div class="burger-menu">
-            <a class="burger-menu__link" href=""><i class="fas fa-bars burger-menu__i"></i></a>
         </div>
     </header>
     <main class="register__main">
@@ -105,37 +106,39 @@
         </div>
     </main>
     <footer class="footer">
-        <section class="footer-section">
-            <i class="fa-solid fa-credit-card footer-section__i footer-section__i--blue"></i>
-            <h3 class="footer-section__h3">Pagá con tarjeta o en efectivo</h3>
-            <p class="footer-section__p">
-                Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!
-            </p>
-        </section>
-        <section>
-            <i class="fa-solid fa-gift footer-section__i footer-section__i--blue"></i>
-            <h3 class="footer-section__h3">Envío gratis desde $ 2.500</h3>
-            <p class="footer-section__p">
-                Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.
-            </p>
-        </section>
-        <section>
-            <div>
-                <i class="fa-solid fa-user-shield footer-section__i footer-section__i--blue"></i>
-            </div>
-            <h3 class="footer-section__h3">
-                Seguridad, de principio a fin
-            </h3>
-            <p class="footer-section__p">
-                ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.
-            </p>
-        </section>
-        <section>
-            <h5 class="footer-section__h5">Copyright © 1999-2020 MercadoLiebre S.R.L.</h5>
-        </section>
+        <div class="footer-container">
+            <section class="footer-section">
+                <i class="fa-solid fa-credit-card footer-section__i footer-section__i--blue"></i>
+                <h3 class="footer-section__h3">Pagá con tarjeta o en efectivo</h3>
+                <p class="footer-section__p">
+                    Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!
+                </p>
+            </section>
+            <section class="footer-section">
+                <i class="fa-solid fa-gift footer-section__i footer-section__i--blue"></i>
+                <h3 class="footer-section__h3">Envío gratis desde $ 2.500</h3>
+                <p class="footer-section__p">
+                    Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.
+                </p>
+            </section>
+            <section class="footer-section">
+                <div>
+                    <i class="fa-solid fa-user-shield footer-section__i footer-section__i--blue"></i>
+                </div>
+                <h3 class="footer-section__h3">
+                    Seguridad, de principio a fin
+                </h3>
+                <p class="footer-section__p">
+                    ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.
+                </p>
+            </section>
+            <section class="footer__copyright">
+                <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
+            </section>
+        </div>
     </footer>
     <script src="https://kit.fontawesome.com/be2c20f70d.js" crossorigin="anonymous"></script>
 </body>
